--- a/styles/sass/tools/_layout.scss
+++ b/styles/sass/tools/_layout.scss
@@ -1,7 +1,11 @@
 // MOBILE DISPLAY
+body{
+  @include flex-column-evenly;
+}
+
 main {
-	width: 100%;
-	height: 100%;
+  height: 90%;
+  width: 100%;
 
 	@include flex-column-evenly;
 }
@@ -13,7 +17,7 @@ main {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(5, 1fr);
   grid-column-gap: 30px;
-  grid-row-gap: 50px;
+  grid-row-gap: 30px;
 }
 
 @media  (min-width: 960px) {
