--- a/styles/style.css
+++ b/styles/style.css
@@ -22,9 +22,16 @@ a:active {
   color: inherit;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 main {
+  height: 90%;
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -38,7 +45,7 @@ main {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(5, 1fr);
   grid-column-gap: 30px;
-  grid-row-gap: 50px;
+  grid-row-gap: 30px;
 }
 
 @media (min-width: 960px) {
@@ -84,4 +91,12 @@ kbd {
 .play {
   background: #1ABC9C;
   transform: scale(1.1);
+}
+
+footer p {
+  color: #34495E;
+}
+footer a:hover {
+  color: #1ABC9C;
+  transition: ease-in all 0.5s;
 }/*# sourceMappingURL=style.css.map */
